tests/types/errors/compound_assign_to_const.mog
const i32 total = 1;
total += 2;
